// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`requests /auth/forgot should finish forgot password flow and reset password 1`] = `
Object {
  "name": "Eddie Van Halen",
  "pid": "test-redacted",
  "username": "evh@example.com",
}
`;

exports[`requests /auth/forgot should finish forgot password flow and reset password 2`] = `Array []`;

exports[`requests /auth/forgot should finish forgot password flow and reset password: cannot reuse token 1`] = `
Object {
  "body": Object {
    "error": "missing, illegal, or expired reset token",
  },
  "headers": Object {
    "connection": "close",
    "content-length": "52",
    "content-security-policy": "default-src 'self';base-uri 'self';block-all-mixed-content;font-src 'self' https: data:;form-action 'self';frame-ancestors 'self';img-src 'self' data:;object-src 'none';script-src 'self';script-src-attr 'none';style-src 'self' https: 'unsafe-inline';upgrade-insecure-requests",
    "content-type": "application/json; charset=utf-8",
    "cross-origin-embedder-policy": "require-corp",
    "cross-origin-opener-policy": "same-origin",
    "cross-origin-resource-policy": "same-origin",
    "expect-ct": "max-age=0",
    "origin-agent-cluster": "?1",
    "referrer-policy": "no-referrer",
    "strict-transport-security": "max-age=15552000; includeSubDomains",
    "vary": "Accept-Encoding",
    "x-content-type-options": "nosniff",
    "x-dns-prefetch-control": "off",
    "x-download-options": "noopen",
    "x-frame-options": "SAMEORIGIN",
    "x-permitted-cross-domain-policies": "none",
    "x-xss-protection": "0",
  },
  "status": 400,
}
`;

exports[`requests /auth/forgot should finish forgot password flow and reset password: dont bypass our validation 1`] = `
Object {
  "body": Object {
    "error": "password too short",
  },
  "headers": Object {
    "connection": "close",
    "content-length": "30",
    "content-security-policy": "default-src 'self';base-uri 'self';block-all-mixed-content;font-src 'self' https: data:;form-action 'self';frame-ancestors 'self';img-src 'self' data:;object-src 'none';script-src 'self';script-src-attr 'none';style-src 'self' https: 'unsafe-inline';upgrade-insecure-requests",
    "content-type": "application/json; charset=utf-8",
    "cross-origin-embedder-policy": "require-corp",
    "cross-origin-opener-policy": "same-origin",
    "cross-origin-resource-policy": "same-origin",
    "expect-ct": "max-age=0",
    "origin-agent-cluster": "?1",
    "referrer-policy": "no-referrer",
    "strict-transport-security": "max-age=15552000; includeSubDomains",
    "vary": "Accept-Encoding",
    "x-content-type-options": "nosniff",
    "x-dns-prefetch-control": "off",
    "x-download-options": "noopen",
    "x-frame-options": "SAMEORIGIN",
    "x-permitted-cross-domain-policies": "none",
    "x-xss-protection": "0",
  },
  "status": 400,
}
`;

exports[`requests /auth/forgot should finish forgot password flow and reset password: ok lets go 1`] = `
Object {
  "body": Object {
    "ok": true,
  },
  "headers": Object {
    "connection": "close",
    "content-length": "11",
    "content-security-policy": "default-src 'self';base-uri 'self';block-all-mixed-content;font-src 'self' https: data:;form-action 'self';frame-ancestors 'self';img-src 'self' data:;object-src 'none';script-src 'self';script-src-attr 'none';style-src 'self' https: 'unsafe-inline';upgrade-insecure-requests",
    "content-type": "application/json; charset=utf-8",
    "cross-origin-embedder-policy": "require-corp",
    "cross-origin-opener-policy": "same-origin",
    "cross-origin-resource-policy": "same-origin",
    "expect-ct": "max-age=0",
    "origin-agent-cluster": "?1",
    "referrer-policy": "no-referrer",
    "strict-transport-security": "max-age=15552000; includeSubDomains",
    "vary": "Accept-Encoding",
    "x-content-type-options": "nosniff",
    "x-dns-prefetch-control": "off",
    "x-download-options": "noopen",
    "x-frame-options": "SAMEORIGIN",
    "x-permitted-cross-domain-policies": "none",
    "x-xss-protection": "0",
  },
  "status": 200,
}
`;

exports[`requests /auth/forgot should finish forgot password flow and reset password: you have to have a password 1`] = `
Object {
  "body": Object {
    "error": "validation",
    "validationErrors": Array [
      Object {
        "code": "invalid_type",
        "expected": "string",
        "message": "Required",
        "path": Array [
          "password",
        ],
        "received": "undefined",
      },
    ],
  },
  "headers": Object {
    "connection": "close",
    "content-length": "151",
    "content-security-policy": "default-src 'self';base-uri 'self';block-all-mixed-content;font-src 'self' https: data:;form-action 'self';frame-ancestors 'self';img-src 'self' data:;object-src 'none';script-src 'self';script-src-attr 'none';style-src 'self' https: 'unsafe-inline';upgrade-insecure-requests",
    "content-type": "application/json; charset=utf-8",
    "cross-origin-embedder-policy": "require-corp",
    "cross-origin-opener-policy": "same-origin",
    "cross-origin-resource-policy": "same-origin",
    "expect-ct": "max-age=0",
    "origin-agent-cluster": "?1",
    "referrer-policy": "no-referrer",
    "strict-transport-security": "max-age=15552000; includeSubDomains",
    "vary": "Accept-Encoding",
    "x-content-type-options": "nosniff",
    "x-dns-prefetch-control": "off",
    "x-download-options": "noopen",
    "x-frame-options": "SAMEORIGIN",
    "x-permitted-cross-domain-policies": "none",
    "x-xss-protection": "0",
  },
  "status": 400,
}
`;

exports[`requests /auth/forgot should start forgot password flow and send email 1`] = `
Object {
  "body": Object {
    "ok": true,
  },
  "headers": Object {
    "connection": "close",
    "content-length": "11",
    "content-security-policy": "default-src 'self';base-uri 'self';block-all-mixed-content;font-src 'self' https: data:;form-action 'self';frame-ancestors 'self';img-src 'self' data:;object-src 'none';script-src 'self';script-src-attr 'none';style-src 'self' https: 'unsafe-inline';upgrade-insecure-requests",
    "content-type": "application/json; charset=utf-8",
    "cross-origin-embedder-policy": "require-corp",
    "cross-origin-opener-policy": "same-origin",
    "cross-origin-resource-policy": "same-origin",
    "expect-ct": "max-age=0",
    "origin-agent-cluster": "?1",
    "referrer-policy": "no-referrer",
    "strict-transport-security": "max-age=15552000; includeSubDomains",
    "vary": "Accept-Encoding",
    "x-content-type-options": "nosniff",
    "x-dns-prefetch-control": "off",
    "x-download-options": "noopen",
    "x-frame-options": "SAMEORIGIN",
    "x-permitted-cross-domain-policies": "none",
    "x-xss-protection": "0",
  },
  "status": 200,
}
`;

exports[`requests /auth/forgot should start forgot password flow and send email 2`] = `
Array [
  Object {
    "content": undefined,
    "contentType": "multipart/alternative",
    "contents": Array [
      undefined,
      "Reset your password with this link:

http://localhost/reset?test-redacted
",
      "<html>

<body>
  You can
  <a href=\\"http://localhost:/reset?test-redacted\\">
    reset your password
  </a>
</body>

</html>
",
    ],
    "envelope": Object {
      "from": "no-reply@elle-postage.example.com",
      "to": Array [
        "evh@example.com",
      ],
    },
    "from": "no-reply@elle-postage.example.com",
    "messageId": "test-redacted",
    "originalMessage": Object {
      "attachments": Array [],
      "from": "Elle Postage <no-reply@elle-postage.example.com>",
      "html": "<html>

<body>
  You can
  <a href=\\"http://localhost:/reset?test-redacted\\">
    reset your password
  </a>
</body>

</html>
",
      "subject": "Your reset password link",
      "text": "Reset your password with this link:

http://localhost/reset?test-redacted
",
      "to": "evh@example.com",
    },
    "response": "test-redacted",
    "subject": "Your reset password link",
    "to": Array [
      "evh@example.com",
    ],
  },
]
`;

exports[`requests /auth/forgot should validate: bad reset token 1`] = `
Object {
  "body": Object {
    "error": "validation",
    "validationErrors": Array [
      Object {
        "code": "invalid_type",
        "expected": "string",
        "message": "Required",
        "path": Array [
          "password",
        ],
        "received": "undefined",
      },
    ],
  },
  "headers": Object {
    "connection": "close",
    "content-length": "151",
    "content-security-policy": "default-src 'self';base-uri 'self';block-all-mixed-content;font-src 'self' https: data:;form-action 'self';frame-ancestors 'self';img-src 'self' data:;object-src 'none';script-src 'self';script-src-attr 'none';style-src 'self' https: 'unsafe-inline';upgrade-insecure-requests",
    "content-type": "application/json; charset=utf-8",
    "cross-origin-embedder-policy": "require-corp",
    "cross-origin-opener-policy": "same-origin",
    "cross-origin-resource-policy": "same-origin",
    "expect-ct": "max-age=0",
    "origin-agent-cluster": "?1",
    "referrer-policy": "no-referrer",
    "strict-transport-security": "max-age=15552000; includeSubDomains",
    "vary": "Accept-Encoding",
    "x-content-type-options": "nosniff",
    "x-dns-prefetch-control": "off",
    "x-download-options": "noopen",
    "x-frame-options": "SAMEORIGIN",
    "x-permitted-cross-domain-policies": "none",
    "x-xss-protection": "0",
  },
  "status": 400,
}
`;

exports[`requests /auth/forgot should validate: no reset token field 1`] = `
Object {
  "body": Object {
    "error": "validation",
    "validationErrors": Array [
      Object {
        "code": "invalid_type",
        "expected": "string",
        "message": "Required",
        "path": Array [
          "resetToken",
        ],
        "received": "undefined",
      },
      Object {
        "code": "invalid_type",
        "expected": "string",
        "message": "Required",
        "path": Array [
          "password",
        ],
        "received": "undefined",
      },
    ],
  },
  "headers": Object {
    "connection": "close",
    "content-length": "261",
    "content-security-policy": "default-src 'self';base-uri 'self';block-all-mixed-content;font-src 'self' https: data:;form-action 'self';frame-ancestors 'self';img-src 'self' data:;object-src 'none';script-src 'self';script-src-attr 'none';style-src 'self' https: 'unsafe-inline';upgrade-insecure-requests",
    "content-type": "application/json; charset=utf-8",
    "cross-origin-embedder-policy": "require-corp",
    "cross-origin-opener-policy": "same-origin",
    "cross-origin-resource-policy": "same-origin",
    "expect-ct": "max-age=0",
    "origin-agent-cluster": "?1",
    "referrer-policy": "no-referrer",
    "strict-transport-security": "max-age=15552000; includeSubDomains",
    "vary": "Accept-Encoding",
    "x-content-type-options": "nosniff",
    "x-dns-prefetch-control": "off",
    "x-download-options": "noopen",
    "x-frame-options": "SAMEORIGIN",
    "x-permitted-cross-domain-policies": "none",
    "x-xss-protection": "0",
  },
  "status": 400,
}
`;

exports[`requests /auth/forgot should validate: no such user 1`] = `
Object {
  "body": Object {
    "error": "incorrect username or password",
  },
  "headers": Object {
    "connection": "close",
    "content-length": "42",
    "content-security-policy": "default-src 'self';base-uri 'self';block-all-mixed-content;font-src 'self' https: data:;form-action 'self';frame-ancestors 'self';img-src 'self' data:;object-src 'none';script-src 'self';script-src-attr 'none';style-src 'self' https: 'unsafe-inline';upgrade-insecure-requests",
    "content-type": "application/json; charset=utf-8",
    "cross-origin-embedder-policy": "require-corp",
    "cross-origin-opener-policy": "same-origin",
    "cross-origin-resource-policy": "same-origin",
    "expect-ct": "max-age=0",
    "origin-agent-cluster": "?1",
    "referrer-policy": "no-referrer",
    "strict-transport-security": "max-age=15552000; includeSubDomains",
    "vary": "Accept-Encoding",
    "www-authenticate": "",
    "x-content-type-options": "nosniff",
    "x-dns-prefetch-control": "off",
    "x-download-options": "noopen",
    "x-frame-options": "SAMEORIGIN",
    "x-permitted-cross-domain-policies": "none",
    "x-xss-protection": "0",
  },
  "status": 401,
}
`;

exports[`requests /auth/forgot should validate: no user field 1`] = `
Object {
  "body": Object {
    "error": "validation",
    "validationErrors": Array [
      Object {
        "code": "invalid_type",
        "expected": "string",
        "message": "Required",
        "path": Array [
          "username",
        ],
        "received": "undefined",
      },
    ],
  },
  "headers": Object {
    "connection": "close",
    "content-length": "151",
    "content-security-policy": "default-src 'self';base-uri 'self';block-all-mixed-content;font-src 'self' https: data:;form-action 'self';frame-ancestors 'self';img-src 'self' data:;object-src 'none';script-src 'self';script-src-attr 'none';style-src 'self' https: 'unsafe-inline';upgrade-insecure-requests",
    "content-type": "application/json; charset=utf-8",
    "cross-origin-embedder-policy": "require-corp",
    "cross-origin-opener-policy": "same-origin",
    "cross-origin-resource-policy": "same-origin",
    "expect-ct": "max-age=0",
    "origin-agent-cluster": "?1",
    "referrer-policy": "no-referrer",
    "strict-transport-security": "max-age=15552000; includeSubDomains",
    "vary": "Accept-Encoding",
    "x-content-type-options": "nosniff",
    "x-dns-prefetch-control": "off",
    "x-download-options": "noopen",
    "x-frame-options": "SAMEORIGIN",
    "x-permitted-cross-domain-policies": "none",
    "x-xss-protection": "0",
  },
  "status": 400,
}
`;

exports[`requests /auth/forgot should validate: not an email 1`] = `
Object {
  "body": Object {
    "error": "validation",
    "validationErrors": Array [
      Object {
        "code": "invalid_string",
        "message": "Invalid email",
        "path": Array [
          "username",
        ],
        "validation": "email",
      },
    ],
  },
  "headers": Object {
    "connection": "close",
    "content-length": "136",
    "content-security-policy": "default-src 'self';base-uri 'self';block-all-mixed-content;font-src 'self' https: data:;form-action 'self';frame-ancestors 'self';img-src 'self' data:;object-src 'none';script-src 'self';script-src-attr 'none';style-src 'self' https: 'unsafe-inline';upgrade-insecure-requests",
    "content-type": "application/json; charset=utf-8",
    "cross-origin-embedder-policy": "require-corp",
    "cross-origin-opener-policy": "same-origin",
    "cross-origin-resource-policy": "same-origin",
    "expect-ct": "max-age=0",
    "origin-agent-cluster": "?1",
    "referrer-policy": "no-referrer",
    "strict-transport-security": "max-age=15552000; includeSubDomains",
    "vary": "Accept-Encoding",
    "x-content-type-options": "nosniff",
    "x-dns-prefetch-control": "off",
    "x-download-options": "noopen",
    "x-frame-options": "SAMEORIGIN",
    "x-permitted-cross-domain-policies": "none",
    "x-xss-protection": "0",
  },
  "status": 400,
}
`;
